Fix visible scrollbar in dialog windows

--- a/packages/admin/src/styles/_scroll.sass
+++ b/packages/admin/src/styles/_scroll.sass
@@ -1,5 +1,5 @@
 .dito-scroll
-  overflow-y: scroll
+  overflow-y: auto
   flex: 1
 
 .dito-scroll-parent
